# wesad-arousal-phenotyping

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  wesad_portfolio_repo_spec.md
configs/: default.yaml  sensors_chest.yaml  sensors_wrist.yaml
notebooks/: 01_dataset_overview.ipynb  02_signal_qc_examples.ipynb  03_feature_visualization.ipynb  04_model_interpretation.ipynb
reports/: example_qc_report.md
reports/figures/: .gitkeep
reports/tables/: .gitkeep  feature_importance.csv  modality_ablation.csv  results_summary.csv
scripts/: download_instructions.md  make_report.py  run_evaluate.py  run_extract_features.py  run_preprocess.py  run_train.py
src/wesad_arousal/: __init__.py  config.py  data.py  labels.py  pipeline.py  preprocessing.py  quality.py  reporting.py  visualization.py
src/wesad_arousal/features/: __init__.py  eda.py  hrv.py  motion.py  respiration.py  temperature.py  windowing.py
src/wesad_arousal/modeling/: __init__.py  baselines.py  evaluation.py  interpretation.py
tests/: conftest.py  test_eda_features.py  test_hrv_features.py  test_preprocessing.py  test_quality.py  test_windowing.py
