[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wesad-arousal-phenotyping"
version = "0.1.0"
description = "Reproducible multimodal wearable physiology pipeline for stress and arousal phenotyping using WESAD"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "neurokit2>=0.2.7",
    "PyYAML>=6.0",
    "pyarrow>=14.0",
    "joblib>=1.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
